# Educational-projects

Database design/: .env  .pdm-python  pyproject.toml
Database design/src/: settings.py
Database design/src/alembic/versions/: 3bfb3c3668ea_add_book_tables.py
Database design/src/db/: __init__.py  base.py
Database design/src/db/models/: __init__.py  author.py  book.py  city.py  client.py  ganre.py  order_items.py  order_status.py  order_status_history.py  purchase.py
Pather/: .env  .pdm-python  main.py  pyproject.toml
Pather/src/alembic/: env.py
Pather/src/alembic/versions/: 29a5ce91b99f_changing_the_type_for_volume_total_.py  755731038561_change_length_of_exchange_product_name.py  d859557f77bb_add_spimex_trading_results_table.py
Pather/src/db/: __init__.py  base.py
Pather/src/db/models/: __init__.py  spimex_trading_results.py
Pather/src/pather/: parther.py
