[project]
name = "Pather"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "HanRix1", email = "HanRix1@mail.ru"},
]
dependencies = ["alembic>=1.14.0", "sqlalchemy>=2.0.37", "requests>=2.32.3", "pandas>=2.2.3", "xlrd>=2.0.1", "bs4>=0.0.2", "pydantic>=2.10.5", "pydantic-settings>=2.7.1", "asyncpg>=0.30.0", "psycopg2>=2.9.10"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
